--- a/resources/public/sass/bootstrap.scss
+++ b/resources/public/sass/bootstrap.scss
@@ -32,5 +32,5 @@
 //@import "../components/bootstrap/scss/tooltip";
 //@import "../components/bootstrap/scss/popover";
 //@import "../components/bootstrap/scss/carousel";
-//@import "../components/bootstrap/scss/utilities";
+@import "../components/bootstrap/scss/utilities";
 //@import "../components/bootstrap/scss/print";
