--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -1,1 +1,7 @@
 @import "bootstrap";
+@import "modules/app_loader";
+@import "modules/backdrop";
+@import "modules/flash";
+@import "modules/icon";
+@import "modules/loader";
+@import "modules/navbar";
