--- a/resources/public/sass/bootstrap.scss
+++ b/resources/public/sass/bootstrap.scss
@@ -23,11 +23,11 @@
 //@import "../components/bootstrap/scss/pagination";
 //@import "../components/bootstrap/scss/badge";
 //@import "../components/bootstrap/scss/jumbotron";
-//@import "../components/bootstrap/scss/alert";
+@import "../components/bootstrap/scss/alert";
 //@import "../components/bootstrap/scss/progress";
 //@import "../components/bootstrap/scss/media";
 //@import "../components/bootstrap/scss/list-group";
-//@import "../components/bootstrap/scss/close";
+@import "../components/bootstrap/scss/close";
 //@import "../components/bootstrap/scss/modal";
 //@import "../components/bootstrap/scss/tooltip";
 //@import "../components/bootstrap/scss/popover";
