--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -2,6 +2,7 @@
 @import "modules/alert";
 @import "modules/app_loader";
 @import "modules/backdrop";
+@import "modules/button";
 @import "modules/icon";
 @import "modules/loader";
 @import "modules/navbar";
