--- a/resources/public/sass/modules/alert.scss
+++ b/resources/public/sass/modules/alert.scss
@@ -1,3 +1,17 @@
-.alert {
+.alerts {
+  z-index: $zindex-dropdown;
   position: absolute;
+  min-width: 300px;
+  left: calc(50% - 150px);
+  top: 25px;
+  opacity: .8;
+  margin: 0 auto;
+}
+
+.alert {
+  @extend .alert-dismissible;
+
+  &--error {
+    @extend .alert-danger;
+  }
 }
