Fix and style pagination

--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -6,6 +6,7 @@
 @import "modules/icon";
 @import "modules/loader";
 @import "modules/navbar";
+@import "modules/pagination";
 @import "modules/poster_list";
 
 svg[role="img"] {
