--- a/resources/public/sass/modules/poster_list.scss
+++ b/resources/public/sass/modules/poster_list.scss
@@ -22,6 +22,8 @@
     .icon {
       width: 23px;
       height: 23px;
+      bottom: auto;
+      margin: 0;
     }
     &--download {
       top: 10px;
