Add basic filtering

--- a/resources/public/sass/bootstrap.scss
+++ b/resources/public/sass/bootstrap.scss
@@ -9,7 +9,7 @@
 //@import "../components/bootstrap/scss/code";
 @import "../components/bootstrap/scss/grid";
 //@import "../components/bootstrap/scss/tables";
-//@import "../components/bootstrap/scss/forms";
+@import "../components/bootstrap/scss/forms";
 @import "../components/bootstrap/scss/buttons";
 //@import "../components/bootstrap/scss/transitions";
 //@import "../components/bootstrap/scss/dropdown";
