--- a/resources/public/sass/modules/poster_list.scss
+++ b/resources/public/sass/modules/poster_list.scss
@@ -14,6 +14,12 @@
       width: 100%;
     }
   }
+  &__buttons {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 35px;
+  }
   &__button {
     @extend .btn;
     @extend .btn-outline-primary;
@@ -21,27 +27,24 @@
     width: 35px;
     height: 35px;
     padding: 6px 2px;
-    position: absolute;
-    right: 10px;
+    margin-bottom: 5px;
     .icon {
       width: 23px;
       height: 23px;
       bottom: auto;
       margin: 0;
     }
-    &--download {
-      top: 10px;
-    }
-    &--edit {
-      top: 50px;
-    }
+  }
+  &__badges {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    line-height: 0;
   }
   &__badge {
     @extend .badge;
     @extend .badge-primary;
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
+    margin-right: 5px;
   }
   &__title {
     padding: 0 10px 5px;
