--- a/resources/public/sass/modules/poster_list.scss
+++ b/resources/public/sass/modules/poster_list.scss
@@ -26,7 +26,7 @@
     background: white;
     width: 35px;
     height: 35px;
-    padding: 6px 2px;
+    padding: 5px 0;
     margin-bottom: 5px;
     .icon {
       width: 23px;
