--- a/resources/public/sass/modules/poster_list.scss
+++ b/resources/public/sass/modules/poster_list.scss
@@ -1,11 +1,10 @@
 .poster-placeholder,
 .poster-thumb {
-  min-height: 326px;
   width: 100%;
-  height: 100%;
   border-radius: $border-radius;
   background: $gray-200;
   overflow: hidden;
+  position: relative;
   &__thumb {
     padding: 5px;
     position: relative;
@@ -47,9 +46,13 @@
     margin-right: 5px;
   }
   &__title {
-    padding: 0 10px 5px;
+    padding: 0 10px 10px;
   }
   &__color {
     height: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
   }
 }
