--- a/resources/public/sass/modules/poster_list.scss
+++ b/resources/public/sass/modules/poster_list.scss
@@ -6,17 +6,20 @@
   overflow: hidden;
   position: relative;
   &__thumb {
-    padding: 5px;
+    margin: 5px;
     position: relative;
+    overflow: hidden;
     img {
       border: 1px solid $border-color;
       width: 100%;
+      min-height: 45px;
+      background: white;
     }
   }
   &__buttons {
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 5px;
     width: 35px;
   }
   &__button {
@@ -36,8 +39,8 @@
   }
   &__badges {
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 5px;
+    left: 5px;
     line-height: 0;
   }
   &__badge {
