--- a/resources/public/sass/modules/navbar.scss
+++ b/resources/public/sass/modules/navbar.scss
@@ -1,8 +1,8 @@
 .navbar {
   border-top: 1px solid $border-color;
   border-bottom: 1px solid $border-color;
-  padding: $grid-gutter-width/2;
-  margin-bottom: $grid-gutter-width;
+  padding: $grid-gutter-width/2 0;
+  margin: 0 0 $grid-gutter-width 0;
   &__logo {
     img {
       float: right;
