Implement generic modal

--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -4,6 +4,7 @@
 @import "modules/backdrop";
 @import "modules/button";
 @import "modules/icon";
+@import "modules/modal";
 @import "modules/loader";
 @import "modules/navbar";
 @import "modules/pagination";
