Implement spec selection modal

--- a/resources/public/sass/bootstrap.scss
+++ b/resources/public/sass/bootstrap.scss
@@ -18,7 +18,7 @@
 //@import "../components/bootstrap/scss/custom-forms";
 //@import "../components/bootstrap/scss/nav";
 //@import "../components/bootstrap/scss/navbar";
-//@import "../components/bootstrap/scss/card";
+@import "../components/bootstrap/scss/card";
 //@import "../components/bootstrap/scss/breadcrumb";
 //@import "../components/bootstrap/scss/pagination";
 @import "../components/bootstrap/scss/badge";
