--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -3,12 +3,14 @@
 @import "modules/app_loader";
 @import "modules/backdrop";
 @import "modules/button";
+@import "modules/color_stripe";
 @import "modules/icon";
 @import "modules/modal";
 @import "modules/loader";
 @import "modules/navbar";
 @import "modules/pagination";
 @import "modules/poster_list";
+@import "modules/select_spec";
 
 svg[role="img"] {
   width: 100%;
