--- a/resources/public/sass/bootstrap.scss
+++ b/resources/public/sass/bootstrap.scss
@@ -5,7 +5,7 @@
 //@import "../components/bootstrap/scss/root";
 @import "../components/bootstrap/scss/reboot";
 @import "../components/bootstrap/scss/type";
-//@import "../components/bootstrap/scss/images";
+@import "../components/bootstrap/scss/images";
 //@import "../components/bootstrap/scss/code";
 @import "../components/bootstrap/scss/grid";
 //@import "../components/bootstrap/scss/tables";
