--- a/resources/public/sass/modules/file_selector.scss
+++ b/resources/public/sass/modules/file_selector.scss
@@ -1,17 +1,9 @@
 .file-selector {
+  input[type="file"] {
+    display: none;
+  }
   .btn {
-    overflow: hidden;
-    position: relative;
-    input {
-      display: block;
-      font-size: 999px;
-      width: 100%;
-      height: 100%;
-      opacity: 0;
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
+    margin-bottom: 0;
   }
   label {
     width: auto !important;
