Implement preview modal

--- a/resources/public/sass/imposter.scss
+++ b/resources/public/sass/imposter.scss
@@ -12,6 +12,7 @@
 @import "modules/navbar";
 @import "modules/pagination";
 @import "modules/poster_list";
+@import "modules/preview_poster";
 @import "modules/select_spec";
 
 svg[role="img"] {
