Implement form prevalidation

--- a/resources/public/sass/modules/generator.scss
+++ b/resources/public/sass/modules/generator.scss
@@ -7,6 +7,9 @@
   .icon--star {
     color: $primary;
   }
+  .icon--check {
+    color: $success;
+  }
   &__thumb {
     width: 200px;
     margin-top: 10px;
