--- a/resources/public/sass/modules/alert.scss
+++ b/resources/public/sass/modules/alert.scss
@@ -1,8 +1,8 @@
 .alerts {
   z-index: $zindex-dropdown;
-  position: absolute;
-  min-width: 300px;
-  left: calc(50% - 150px);
+  position: fixed;
+  min-width: 340px;
+  left: calc(50% - 170px);
   top: 25px;
   opacity: .8;
   margin: 0 auto;
@@ -17,5 +17,8 @@
   }
   &--success {
     @extend .alert-success;
+  }
+  &--info {
+    @extend .alert-info;
   }
 }
